fixed layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ input[type="number"] {
 }
 
 .inputLabel {
-	@apply font-semibold mb-2 capitalize;
+	@apply mb-2 font-semibold capitalize;
 }
 
 .hideAlertModal {
@@ -56,7 +56,7 @@ input[type="number"] {
 
 /* dashboard */
 .dashboardScreen {
-	@apply w-full py-6 px-12 bg-slate-50 min-h-screen mt-20;
+	@apply w-full min-h-screen px-12 py-6 mt-20 bg-slate-50;
 }
 
 .dashboardHeading {
